user backend add

--- a/frontend/src/app/Pages/add-user/add-user.component.html
+++ b/frontend/src/app/Pages/add-user/add-user.component.html
@@ -370,8 +370,8 @@
                             <option value="EASTERN CAPE">EASTERN CAPE</option>
                             <option value="WESTERN CAPE">WESTERN CAPE</option>
                             <option value="FREE STATE">FREE STATE</option>
-                            <option value="GAUTENG">GAUTENG</option>
-                            <option value="GAUTENG">GAUTENG</option>
+                            <option value="KWAZULU-NATAL">KWAZULU-NATAL</option>
+                            <option value="NORTHERN CAPE">NORTHERN CAPE</option>
                         </select>
 
                         <div class="mb-4">
