--- a/frontend/src/app/Pages/manage-user/manage-user.component.html
+++ b/frontend/src/app/Pages/manage-user/manage-user.component.html
@@ -1,5 +1,10 @@
 <app-navbar></app-navbar>
 
+<div class="container d-flex justify-content-end mt-5 print">
+    <button id="decline"class="btn btn-outline-success mt-1 mb-2">
+        MS Word
+        </button>
+</div>
 <div class="container mt-5 overflow-scroll w-60">
     <!-- Booking -->
     <table class="table table-striped">
