--- a/frontend/src/app/Pages/login/login.component.html
+++ b/frontend/src/app/Pages/login/login.component.html
@@ -228,7 +228,7 @@
                     <div class="login">
                          <button type="submit" class="btn mt-3 px-5 text-light" id="submit">Login</button>
                     </div>
-                    <p class="tag mt-3 mb-3">Don't have an account? <a routerLink='/register'>Register</a></p>
+                    <!-- <p class="tag mt-3 mb-3">Don't have an account? <a routerLink='/register'>Register</a></p> -->
                 </form>
                 
             </div>
